--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             </table>
 
         </div>
-        <button class="again"> Play Again </button>
-
+        <button class="newgame"> New Game </button>
+        <button class="playagain"> Play Again </button>
 
     </div>
     <script src="main.js"></script>
